# atlas

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  vercel.json
.github/workflows/: ci.yml
atlas/: .env.example  .gitignore  README.md  __init__.py  config.py  contracts.py  contracts_v2.py  contracts_v3.py  critic_loop.py  designpro_atlas_world_class.html  designpro_helium_clone.html  event_store.py  logging.py  main.py  orchestrator.py  pipeline.py  pyproject.toml  vercel.json
atlas/.github/workflows/: ci.yml
atlas/agents/: architect.py  base.py  coder.py  intelligence_router.py  verifier.py
atlas/api/: app.py  task_service.py  websocket_manager.py
atlas/governor/: governor.py
atlas/memory/: failure_memory.py  prompt_enhancer.py
atlas/tests/unit/: test_coder.py  test_contracts.py  test_sandbox.py  test_tasks.py
atlas/tools/: sandbox.py
scripts/: check_tasks.py  e2e_test.py
static/: designpro_atlas_world_class.html
tests/: conftest.py
tests/integration/: test_critic_loop.py  test_mocked_pipeline.py
tests/unit/: test_governor_memory.py  test_health.py  test_sandbox.py
